--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "^4.18.3",
     "multer": "^1.4.5-lts.2",
     "mysql2": "^3.9.2",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "sequelize": "^6.37.7",
+    "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
     "bcrypt": "^5.1.1"
